--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://thomasgiannetti.netlify.app/
+baseURL: https://thomas-portfolio2021.netlify.app/
 languageCode: en-us
 title: Forty
 theme: forty
