--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://thomas-portfolio2021.netlify.app/
+baseURL: https://thomasgf-portfolio2021.netlify.app/
 languageCode: en-us
 title: Forty
 theme: forty
@@ -84,7 +84,7 @@ params:
       - image: pic01.jpg
         subtitle: Ipsum Dolor Sit Amet
         title: Aliquam
-        url: blogs/aliquam
+        url: blogs/thomas
       - image: pic02.jpg
         subtitle: Feugiat Amet Tempus
         title: Tempus
