--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "themes/vex-hugo"]
 	path = themes/vex-hugo
 	url = git@github.com:themefisher/vex-hugo.git
+[submodule "vex-hugo"]
+	path = vex-hugo
+	url = git@github.com:themefisher/vex-hugo.git
