--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: https://thomasgf-portfolio2021.netlify.app/
 languageCode: en-us
-title: Forty
+title: T.G.F.
 theme: forty
 googleAnalytics: ''
 disqusShortname: ''
